# podcast

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  lab04-report.md  lab05-report.md  mkdocs.yml  pyproject.toml  pytest.ini
backend/: Dockerfile  pytest.ini
backend/app/: main.py
backend/app/api/: api.py  dependencies.py
backend/app/api/routes/: podcast.py  rss.py  webhook.py
backend/app/core/: config.py  logger.py
backend/app/core/db/: database.py
backend/app/core/models/: podcast.py  rss.py
backend/app/core/services/: __init__.py  groq.py
backend/app/crud/: __init__.py  base_crud.py  podcast_crud.py  rss_crud.py
backend/app/static/css/: styles.css
backend/app/static/js/: script.js
backend/app/templates/: base.html  home.html
backend/app/templates/components/: header.html  notFound.html
backend/app/templates/components/episodes/: episodes.html
backend/app/templates/components/podcast/: create_alternative_episode.html  create_episode.html  list_episodes.html
backend/app/templates/components/rss/: feeds.html
backend/src/app/api/: api.py
backend/src/app/crud/: podcast_crud.py  rss_crud.py
backend/src/tests/: __init__.py
backend/src/tests/routes/: test_podcast.py
backend/tests/: conftest.py
backend/tests/routes/: test_podcast.py
bot/: bot.py  data.yaml
bot/helpers/: utils.py
docs/: examples.md  index.md  installation.md  report.md
scripts/: build.sh  clean.sh  run.sh
src/: a.py
src/app/: main.py
src/app/api/: api.py  dependencies.py
src/app/api/routes/: admin.py  podcast.py  podcast_api.py  rss.py  rss_api.py  webhook.py
src/app/core/: config.py
src/app/core/db/: database.py
src/app/core/models/: base.py  podcast.py  rss.py
src/app/core/services/: __init__.py  groq.py
src/app/crud/: __init__.py  base.py  base_crud.py  podcast_crud.py  rss_crud.py
src/app/static/css/: styles.css
src/app/templates/: about.html  base.html
src/app/templates/components/: header.html  notFound.html  successful.html
src/app/templates/components/admin/: add_episode.html  dashboard.html  edit_episode.html  episodes.html  login.html  rss_feeds.html
src/tests/: conftest.py
src/tests/routes/: test_podcast.py
(+5 files in other folders)
