[project]
name = "podgen"
version = "0.1.0"
description = "Podcast episodes aggregator and generator service"
authors = [
    {name = "the truth"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "groq (>=0.28.0,<0.29.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "testcontainers[postgres] (>=4.10.0,<5.0.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"