[project]
name = "podgen"
version = "0.1.0"
description = "Podcast episodes aggregator and generator service"
authors = [
    {name = "the truth"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "groq (>=0.28.0,<0.29.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "mkdocs-material (>=9.6.14,<10.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "aiohttp>=3.13.1",
]
